--- a/api/deployment/Dockerfile.production
+++ b/api/deployment/Dockerfile.production
@@ -19,7 +19,7 @@ RUN useradd --create-home --shell /bin/bash app
 WORKDIR /app
 
 # Copy requirements first for better caching
-COPY requirements.txt .
+COPY api/coeqwal-api/requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
