Fix assumption_definition data types and add ruff exclude config

--- a/api/coeqwal-api/ruff.toml
+++ b/api/coeqwal-api/ruff.toml
@@ -1,6 +1,9 @@
 # Ruff configuration for COEQWAL API
 # https://docs.astral.sh/ruff/
 
+# Exclude archived/unused files
+exclude = ["routes/_archive"]
+
 [lint]
 # Enable these rule categories:
 # E = pycodestyle errors
