--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,9 @@ etl/*/staging/
 etl/statistics/charts/
 etl/coeqwal-etl/dss_processing/output/
 
+# ETL verification outputs (track scripts, ignore generated PDFs)
+etl/verification/*.pdf
+
 # IDE and editor junk
 .vscode/
 .idea/
